--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>CLICK ON INSPECT TOOL AND REFRESH TO SEE THE OUTPUT IN CONSOLE</h1>
+    <h2>NEGLECT GITHUB ERROR WITH PERMISSIONS-POLICY HEADER</h2>
 </body>
 </html>
